+bug on tablet fix

--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -91,7 +91,7 @@ margin-bottom: 22px;
 .advantages-class-ul{
     display: flex;
     flex-wrap: wrap;
-    gap:  50px 60px;
+    gap:  12px 60px;
     
 }
 .div-for-circle{
